--- a/app/assets/stylesheets/articles.css.scss
+++ b/app/assets/stylesheets/articles.css.scss
@@ -3,31 +3,31 @@
 
 // All Articles
 #main-articles-listing {
-  @include style-main-container(90px 220px 40px);
+  @include style-main-container(64px 20px 32px);
 
   .container-wrapper {
     .articles-listing-textbox {
       display: grid;
-      grid-template-columns: 53% 45%;
-      grid-gap: 2%;
+      grid-gap: 8%;
       align-items: center;
 
       .articles-textbox {
         justify-content: center;
+
         .textbox-primary {
           color: $color-grey;
           backface-visibility: hidden;
-          margin-bottom: 30px;
+          margin-bottom: 28px;
 
           .textbox-primary--main {
             display: block;
-            font-size: 36px;
+            font-size: 28px;
             margin-bottom: 10px;
           }
 
           .textbox-primary--sub {
             display: block;
-            font-size: 17px;
+            font-size: 15px;
             font-family: "Montserrat", sans-serif;
           }
         }
@@ -35,7 +35,7 @@
         .textbox-btn {
           border: 0.75px solid $color-orange-first;
           border-radius: 10px;
-          padding: 10px 18px;
+          padding: 8px 16px;
           cursor: pointer;
           text-decoration: none;
           outline: none;
@@ -61,21 +61,20 @@
 
     .articles-listing__heading {
       align-self: flex-start;
-      margin: 32px 0 24px 12px;
+      margin: 24px 0 20px;
 
       .heading-primary {
         margin: 0;
         color: $color-grey;
-        font-size: 24px;
+        font-size: 20px;
         border-top: 1px $color-black-primary solid;
-        padding-top: 36px;
+        padding-top: 40px;
         text-align: center;
       }
     }
 
     .article__listing {
       display: grid;
-      grid-template-columns: repeat(2, 46%);
       grid-gap: 30px;
       justify-content: center;
 
@@ -84,13 +83,13 @@
           min-height: 100%;
           background: $color-white;
           box-shadow: 0px 10px 50px 0px rgba(84, 110, 122, 0.15);
-          padding: 24px;
+          padding: 20px;
           border-radius: 4px;
 
           .article-title {
             text-transform: uppercase;
             font-weight: bold;
-            font-size: 1.5em;
+            font-size: 18px;
             color: $color-grey;
           }
 
@@ -108,7 +107,7 @@
             p {
               font-family: "Montserrat", sans-serif;
               color: $color-grey;
-              margin: 16px 0;
+              margin: 14px 0;
             }
           }
 
@@ -344,6 +343,10 @@
 }
 
 @media (min-width: 432px) {
+  #main-articles-listing {
+    @include style-main-container(64px 28px 32px);
+  }
+
   #main-read-article {
     @include style-main-container(82px 16px 40px);
     justify-content: center;
@@ -386,12 +389,75 @@
 }
 
 @media (min-width: 464px) {
+  #main-articles-listing {
+    @include style-main-container(64px 36px 32px);
+
+    .container-wrapper {
+      .articles-listing-textbox {
+        .articles-textbox {
+          .textbox-primary {
+            margin-bottom: 30px;
+
+            .textbox-primary--main {
+              font-size: 32px;
+            }
+
+            .textbox-primary--sub {
+              font-size: 17px;
+            }
+          }
+
+          .textbox-btn {
+            padding: 10px 18px;
+          }
+        }
+      }
+
+      .articles-listing__heading {
+        margin: 28px 0 20px;
+
+        .heading-primary {
+          font-size: 26px;
+        }
+      }
+
+      .article__listing {
+        .article__wrapper {
+          .article {
+            padding: 24px;
+
+            .article-title {
+              font-size: 21px;
+            }
+
+            .article-body {
+              p {
+                margin: 16px 0;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
   #main-read-article {
     @include style-main-container(118px 28px 80px);
   }
 }
 
 @media (min-width: 544px) {
+  #main-articles-listing {
+    @include style-main-container(68px 44px 32px);
+
+    .container-wrapper {
+      .articles-listing-textbox {
+        grid-template-columns: 53% 45%;
+        grid-gap: 2%;
+      }
+    }
+  }
+
   #main-read-article {
     @include style-main-container(112px 32px 48px);
 
@@ -432,6 +498,10 @@
 }
 
 @media (min-width: 640px) {
+  #main-articles-listing {
+    @include style-main-container(78px 56px 32px);
+  }
+
   #main-read-article {
     @include style-main-container(128px 64px 48px);
 
@@ -448,6 +518,34 @@
 }
 
 @media (min-width: 768px) {
+  #main-articles-listing {
+    @include style-main-container(88px 56px 32px);
+
+    .container-wrapper {
+      .articles-listing-textbox {
+        .articles-textbox {
+          .textbox-primary {
+            .textbox-primary--main {
+              font-size: 36px;
+            }
+          }
+        }
+      }
+
+      .articles-listing__heading {
+        margin: 32px 0 24px 12px;
+
+        .heading-primary {
+          font-size: 28px;
+        }
+      }
+
+      .article__listing {
+        grid-template-columns: repeat(2, 46%);
+      }
+    }
+  }
+
   #main-read-article {
     @include style-main-container(128px 88px 48px);
 
@@ -466,6 +564,10 @@
 }
 
 @media (min-width: 840px) {
+  #main-articles-listing {
+    @include style-main-container(96px 72px 32px);
+  }
+
   #main-read-article {
     @include style-main-container(128px 140px 48px);
 
@@ -482,18 +584,30 @@
 }
 
 @media (min-width: 960px) {
+  #main-articles-listing {
+    @include style-main-container(96px 104px 32px);
+  }
+
   #main-read-article {
     @include style-main-container(128px 200px 48px);
   }
 }
 
 @media (min-width: 1024px) {
+  #main-articles-listing {
+    @include style-main-container(96px 144px 32px);
+  }
+
   #main-read-article {
     @include style-main-container(128px 240px 48px);
   }
 }
 
 @media (min-width: 1200px) {
+  #main-articles-listing {
+    @include style-main-container(96px 220px 32px);
+  }
+
   #main-read-article {
     @include style-main-container(128px 320px 48px);
   }
