--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -5,6 +5,8 @@ body {
   flex-direction: column;
   min-height: 100vh;
   font-family: "Josefin Sans", sans-serif;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 // Category and Blogger Mixins
