- implement responsiveness on the create and edit category modals

--- a/app/assets/stylesheets/bloggers.scss
+++ b/app/assets/stylesheets/bloggers.scss
@@ -75,7 +75,7 @@
     }
 
     .update-profile-header {
-      @include style-modal-header;
+      @include style-modal-header(28px, 26px, 14px);
     }
 
     .profile-form-content {
