--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -150,7 +150,8 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   width: $width;
-  max-width: 100%;
+  max-width: 92%;
+  // max-width: 100%;
   height: $height;
   max-height: 100%;
 }
@@ -166,7 +167,8 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  // height: 100%;
+  height: 90%;
   overflow: auto;
 }
 
@@ -178,10 +180,10 @@ body {
   background: asset-url("close.svg") no-repeat;
 }
 
-@mixin style-modal-header {
-  font-size: 28px;
-  line-height: 26px;
-  padding-bottom: 14px;
+@mixin style-modal-header($font-size, $line-height, $padding-bottom) {
+  font-size: $font-size;
+  line-height: $line-height;
+  padding-bottom: $padding-bottom;
 }
 
 @mixin style-modal-overlay {
