--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -94,7 +94,7 @@
 
   .new-category-modal-content,
   .edit-category-modal-content {
-    @include style-modal-content(20px 12px);
+    @include style-modal-content(16px 12px);
 
     #new-category-close,
     #edit-category-close {
@@ -103,7 +103,7 @@
 
     .new-category-header,
     .edit-category-header {
-      @include style-modal-header;
+      @include style-modal-header(24px, 24px, 10px);
     }
 
     .category-form-content {
@@ -117,11 +117,12 @@
           border: 1px solid $color-orange-first;
           box-shadow: 0px 10px 50px 0px rgba(0, 0, 0, 0.25);
           border-radius: 5px;
+          height: 40px;
         }
 
         .category-form__actions {
           text-align: right;
-          margin: 16px 24px 16px 48px;
+          margin: 12px 16px 12px 48px;
           color: $color-orange-first;
 
           .save-button {
@@ -146,7 +147,7 @@
   @include style-modal-overlay;
 }
 
-// Single Category
+// Single Category Articles
 #main-category-articles-listing {
   @include style-main-container(100px 240px 40px);
 
@@ -252,6 +253,34 @@
       .new-category {
         @include style-btn-container(52px, 24px);
         margin: 0;
+      }
+    }
+  }
+
+  #create-new-category-modal,
+  #edit-category-modal {
+    max-width: 100%;
+
+    .new-category-modal-content,
+    .edit-category-modal-content {
+      @include style-modal-content(20px 12px);
+      height: 100%;
+
+      .new-category-header,
+      .edit-category-header {
+        @include style-modal-header(28px, 26px, 14px);
+      }
+
+      .category-form-content {
+        .category-form {
+          .category-name {
+            height: auto;
+          }
+
+          .category-form__actions {
+            margin: 16px 24px 16px 48px;
+          }
+        }
       }
     }
   }
