--- a/app/assets/stylesheets/bloggers.scss
+++ b/app/assets/stylesheets/bloggers.scss
@@ -1,27 +1,27 @@
 @import "variables";
 @import "base";
 
-// All Bloggers
+/* All Bloggers */
 #main-bloggers-listing {
   @include style-main-container(0px);
 
   .container-wrapper {
-    @include style-container-wrapper(80px 180px 30px);
+    @include style-container-wrapper(64px 16px 36px);
 
     .bloggers-listing__heading {
-      @include style-list-heading(24px 0 32px 32px);
+      @include style-list-heading(24px 0 26px 12px);
 
       h2 {
-        @include style-header(30px);
+        @include style-header(24px);
       }
 
       .seperator {
-        @include style-seperator(100px);
+        @include style-seperator(80px);
       }
     }
 
     .bloggers__listing {
-      @include style-listings-grid(repeat(3, 30%), 24px);
+      @include style-listings-grid(repeat(1, 96%), 24px);
       @include style-listings-temp;
 
       .blogger-wrapper {
@@ -63,7 +63,7 @@
   }
 }
 
-// Profile Modal
+/* Profile Modal */
 #update-profile-modal {
   @include style-main-modal-wrapper(430px, 386px);
 
@@ -115,6 +115,12 @@
 }
 
 @media (min-width: 352px) {
+  #main-bloggers-listing {
+    .container-wrapper {
+      @include style-container-wrapper(64px 24px 36px);
+    }
+  }
+
   #update-profile-modal {
     .update-profile-modal-content {
       .profile-form-content {
@@ -135,6 +141,12 @@
 }
 
 @media (min-width: 380px) {
+  #main-bloggers-listing {
+    .container-wrapper {
+      @include style-container-wrapper(64px 36px 36px);
+    }
+  }
+
   #update-profile-modal {
     .update-profile-modal-content {
       @include style-modal-content(14px);
@@ -158,6 +170,12 @@
 }
 
 @media (min-width: 432px) {
+  #main-bloggers-listing {
+    .container-wrapper {
+      @include style-container-wrapper(64px 60px 36px);
+    }
+  }
+
   #update-profile-modal {
     @include style-main-modal-wrapper(410px, 384px);
     max-width: 100%;
@@ -186,6 +204,108 @@
             }
           }
         }
+      }
+    }
+  }
+}
+
+@media (min-width: 544px) {
+  #main-bloggers-listing {
+    .container-wrapper {
+      @include style-container-wrapper(64px 24px 36px);
+
+      .bloggers-listing__heading {
+        @include style-list-heading(24px 0 28px 38px);
+
+        h2 {
+          @include style-header(28px);
+        }
+
+        .seperator {
+          @include style-seperator(100px);
+        }
+      }
+
+      .bloggers__listing {
+        @include style-listings-grid(repeat(2, 41%), 24px);
+      }
+    }
+  }
+}
+
+@media (min-width: 640px) {
+  #main-bloggers-listing {
+    .container-wrapper {
+      .bloggers-listing__heading {
+        @include style-list-heading(24px 0 30px 56px);
+
+        h2 {
+          @include style-header(30px);
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 768px) {
+  #main-bloggers-listing {
+    .container-wrapper {
+      @include style-container-wrapper(64px 36px 36px);
+
+      .bloggers-listing__heading {
+        @include style-list-heading(24px 0 32px 60px);
+      }
+    }
+  }
+}
+
+@media (min-width: 840px) {
+  #main-bloggers-listing {
+    .container-wrapper {
+      @include style-container-wrapper(64px 48px 36px);
+
+      .bloggers-listing__heading {
+        @include style-list-heading(24px 0 32px 64px);
+      }
+    }
+  }
+}
+
+@media (min-width: 960px) {
+  #main-bloggers-listing {
+    .container-wrapper {
+      @include style-container-wrapper(64px 48px 36px);
+
+      .bloggers-listing__heading {
+        @include style-list-heading(24px 0 32px 30px);
+
+        h2 {
+          @include style-header(32px);
+        }
+      }
+
+      .bloggers__listing {
+        @include style-listings-grid(repeat(3, 30%), 24px);
+      }
+    }
+  }
+}
+
+@media (min-width: 1056px) {
+  #main-bloggers-listing {
+    .container-wrapper {
+      @include style-container-wrapper(72px 96px 40px);
+    }
+  }
+}
+
+@media (min-width: 1200px) {
+  #main-bloggers-listing {
+    .container-wrapper {
+      @include style-container-wrapper(72px 180px 40px);
+
+      .bloggers-listing__heading {
+        @include style-list-heading(24px 0 32px 32px);
       }
     }
   }
