--- a/app/assets/stylesheets/auth_components.scss
+++ b/app/assets/stylesheets/auth_components.scss
@@ -2,6 +2,8 @@
 @import "base";
 
 @mixin style-main-container($image) {
+  display: flex;
+  align-items: center;
   flex: 1;
   background: linear-gradient(rgba(0, 0, 0, 0.66), rgba(0, 0, 0, 0.66)),
     asset-url($image) center/cover;
@@ -11,7 +13,6 @@
   padding: 0;
   display: flex;
   justify-content: center;
-  margin: 200px auto auto;
 
   h2 {
     color: $color-white;
