--- a/app/assets/stylesheets/signup_page.scss
+++ b/app/assets/stylesheets/signup_page.scss
@@ -34,3 +34,29 @@
     }
   }
 }
+
+@media (max-width: 432px) {
+  #main-signup {
+    .container-fluid {
+      margin-top: 36px;
+
+      h2 {
+        font-size: 15px;
+        margin-bottom: 24px;
+      }
+
+      .signup-form {
+        padding: 32px 24px;
+
+        .form-horizontal {
+          .col-sm-6 {
+            input {
+              min-width: 248px;
+              padding-left: 32px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
